fix spacing in main nav

--- a/public/css/less/header.less
+++ b/public/css/less/header.less
@@ -29,27 +29,36 @@ body > header {
 	}
 
 	nav {
-		display: table;
-		padding: 7px 0;
-		width: 100%;
-		table-layout: fixed;
-
+		.clearfix;
 		border-top: solid 1px #c00;
 		border-bottom: solid 1px #c00;
+		padding: 7px 0;
 
 		a {
-			display: table-cell;
+			display: block;
+			float: left;
 			padding-top: 3px;
-			width: 100%;
-			overflow: hidden;
 			text-transform: uppercase;
-			text-align: center;
+			text-align: left;
 
 			&:first-child {
-				text-align: left;
+				width: 130px
 			}
 
-			&:last-child {
+			&:nth-child(2) {
+				width: 130px;
+			}
+
+			&:nth-child(3) {
+				width: 210px;
+			}
+
+			&:nth-child(4) {
+				width: 240px;
+			}
+
+			&:nth-child(5) {
+				width: 90px;
 				text-align: right;
 			}
 
