--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -402,25 +402,40 @@ body > header h1:before {
   height: 120px;
 }
 body > header nav {
-  display: table;
-  padding: 7px 0;
-  width: 100%;
-  table-layout: fixed;
+  *zoom: 1;
   border-top: solid 1px #c00;
   border-bottom: solid 1px #c00;
+  padding: 7px 0;
+}
+body > header nav:before,
+body > header nav:after {
+  content: ' ';
+  display: table;
+}
+body > header nav:after {
+  clear: both;
 }
 body > header nav a {
-  display: table-cell;
+  display: block;
+  float: left;
   padding-top: 3px;
-  width: 100%;
-  overflow: hidden;
   text-transform: uppercase;
-  text-align: center;
-}
-body > header nav a:first-child {
   text-align: left;
 }
-body > header nav a:last-child {
+body > header nav a:first-child {
+  width: 130px;
+}
+body > header nav a:nth-child(2) {
+  width: 130px;
+}
+body > header nav a:nth-child(3) {
+  width: 210px;
+}
+body > header nav a:nth-child(4) {
+  width: 240px;
+}
+body > header nav a:nth-child(5) {
+  width: 90px;
   text-align: right;
 }
 body > header nav a,
